# StackCode

./: .gitignore  CMakeLists.txt  Makefile  Makefile.config  README.md  app.rpn  app.stc  debug  div.bc  program.bc  program2.bc
camel/: Makefile
camel/include/: ast_analyzer.h  ast_parser.h  compiler.h
camel/src/: ast_analyzer.c  ast_parser.c  compiler.c  main.c
doc/: index.html
docs/: README.md  _navbar.md  _sidebar.md  index.html  language.md  runtime.md  styles.css
examples/: program.cml
examples/bc/: program.bc
include/: bc_parser.h  cli.h  debug.h  functions.h  gc.h  jit_native.h  jit_parser.h  loader.h  main.h  tokens.h  vm.h
programs/: div.stc
programs/div/: div.c  div.py  div.stc
scripts/: build.sh  build_antrl.sh  run.sh
src/: AstBuilder.cpp  AstBuilder.h  CMakeLists.txt  IdentifierManager.cpp  IdentifierManager.h  LlvmBuilder.cpp  LlvmBuilder.h  Program.cpp  Program.h  RuntimeLibs.cpp  RuntimeLibs.h  Type.cpp  Type.h  bc_parser.c  cli.c  debug.c  env.c  error.cpp  error.h  functions.c  gc.c  hashmap.c  jit_native.c  jit_parser.c  loader.c  main.c  main.cpp  parser.c  tokens.c  utils.c  vm.c
src/antlr/: Stc.g4  Stc.interp  StcBaseListener.cpp  StcBaseListener.h  StcBaseVisitor.cpp  StcBaseVisitor.h  StcLexer.cpp  StcLexer.h  StcListener.cpp  StcListener.h  StcParser.cpp  StcParser.h  StcVisitor.cpp  StcVisitor.h
src/cli/: Cli.cpp  Cli.h
src/include/: cli.h  env.h  hashmap.h  heap.h  parser.h  structs.h  tokens.h  utils.h  vm.h
src/test/: test.sh
src/test/if/: if.rpn
src/test/repeat/: out  repeat.rpn
stc/: README.md  compile.sh
stc/lib/: Header.h  arythmetic.c  io.c  operators.c
test/: CMakeLists.txt
test/ast_test/: CMakeLists.txt  IfTest.cpp  if.rpn
vm/: Makefile
vm/include/: bc_parser.h  debug.h  functions.h  gc.h  vm.h
vm/src/: bc_parser.c  debug.c  functions.c  main.c  vm.c
